--- a/frontend/css/base/reset.css
+++ b/frontend/css/base/reset.css
@@ -25,6 +25,8 @@ body {
     background-color: var(--sw-bg-base);
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+    min-width: 720px;
+    min-height: 1000px;
 }
 
 /* === 链接 === */
